; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_reliable.c_reliable_schedule_now.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_reliable.c_reliable_schedule_now.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reliable = type { i32, i32, i32, %struct.reliable_entry* }
%struct.reliable_entry = type { i32, i32, i64 }

@D_REL_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"ACK reliable_schedule_now\00", align 1
@now = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reliable_schedule_now(%struct.reliable* %0) #0 {
  %2 = alloca %struct.reliable*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.reliable_entry*, align 8
  store %struct.reliable* %0, %struct.reliable** %2, align 8
  %5 = load i32, i32* @D_REL_DEBUG, align 4
  %6 = call i32 @dmsg(i32 %5, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.reliable*, %struct.reliable** %2, align 8
  %8 = getelementptr inbounds %struct.reliable, %struct.reliable* %7, i32 0, i32 0
  store i32 0, i32* %8, align 8
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %36, %1
  %10 = load i32, i32* %3, align 4
  %11 = load %struct.reliable*, %struct.reliable** %2, align 8
  %12 = getelementptr inbounds %struct.reliable, %struct.reliable* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = icmp slt i32 %10, %13
  br i1 %14, label %15, label %39

15:                                               ; preds = %9
  %16 = load %struct.reliable*, %struct.reliable** %2, align 8
  %17 = getelementptr inbounds %struct.reliable, %struct.reliable* %16, i32 0, i32 3
  %18 = load %struct.reliable_entry*, %struct.reliable_entry** %17, align 8
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.reliable_entry, %struct.reliable_entry* %18, i64 %20
  store %struct.reliable_entry* %21, %struct.reliable_entry** %4, align 8
  %22 = load %struct.reliable_entry*, %struct.reliable_entry** %4, align 8
  %23 = getelementptr inbounds %struct.reliable_entry, %struct.reliable_entry* %22, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %35

26:                                               ; preds = %15
  %27 = load i32, i32* @now, align 4
  %28 = load %struct.reliable_entry*, %struct.reliable_entry** %4, align 8
  %29 = getelementptr inbounds %struct.reliable_entry, %struct.reliable_entry* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 4
  %30 = load %struct.reliable*, %struct.reliable** %2, align 8
  %31 = getelementptr inbounds %struct.reliable, %struct.reliable* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.reliable_entry*, %struct.reliable_entry** %4, align 8
  %34 = getelementptr inbounds %struct.reliable_entry, %struct.reliable_entry* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 8
  br label %35

35:                                               ; preds = %26, %15
  br label %36

36:                                               ; preds = %35
  %37 = load i32, i32* %3, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %3, align 4
  br label %9

39:                                               ; preds = %9
  ret void
}

declare dso_local i32 @dmsg(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
